# OpenNoteBlockStudio

./: .gitattributes  .gitignore  404.html  CNAME  Gemfile  LICENSE  Minecraft Note Block Studio.resource_order  Minecraft Note Block Studio.yyp  README.md  _config.yml  about.md  changelog.md  features.md  index.md  mine  nbs.md  run.cmd
_includes/: head.html
_layouts/: default.html
_posts/: 2019-07-29-welcome-to-jekyll.markdown
datafiles/: ExecuteShell.dylib  NBS Player Mode.bat  libzoom.cpp  libzoom.dylib  libzoom.sh  move.bat  xdg-open
datafiles/Data/Python/: .gitignore  README.md  audio_export.py  package.py  pyproject.toml
datafiles_yy/: 7za.exe.yy  ExecuteShell.dll.yy  ExecuteShell.dll.zip.yy  ExecuteShell.dylib.yy  ExecuteShell.dylib.zip.yy  ExecuteShell.so.yy  ExecuteShell.so.zip.yy  move.bat.yy
docs/: _config.yml
pages/: 404.html  changelog.md  dashboard.md  features.md  my_songs.md  nbs.md  new_song.md  privacy_policy.md  signin.md  songs.md  terms_of_service.md  update_song.md
views/: 01900827-8dc0-435f-814e-d178b3855946.yy  06e4efec-a972-47e0-bb94-9763671b3bb8.yy  0a37b354-099c-4703-bfcd-c58d69a23011.yy  0da24e0a-f71e-4abd-a5b1-b6dbf8f9af62.yy  0fc2b1db-9ac2-48f7-9864-586f3dee5bd6.yy  116d82db-1edb-4431-a10d-a1d0a34fde40.yy  140aed13-b412-4d1b-bf2b-c78963853e5b.yy  1aa236d2-761e-4d99-831c-12507156c794.yy  1e06239f-58bd-40af-90a2-ecd64e8f1256.yy  1f6c51a9-a407-4c9d-b41b-84ff0c3d47ea.yy  20b863dc-0243-4f69-a04a-ee06ce744d80.yy  20c11c22-04c5-4cb3-8888-a3c374b46278.yy  28204c8c-c829-4953-8fac-e76df899924a.yy  383997d9-c84b-442b-8376-30d9f4e737d3.yy  (+64 more)
(+1300 files in other folders)
